[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/themes/metal_theme/MetalTheme.tres" type="Theme" id=1]
[ext_resource path="res://game/battle/screens/victory/Win.gd" type="Script" id=2]
[ext_resource path="res://assets/images/ui/loot/loot_window1.png" type="Texture" id=3]
[ext_resource path="res://game/recipe-book/RecipeBook.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/battle/screens/victory/WinRecipe.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/themes/general_theme/general_theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/images/ui/pearl.png" type="Texture" id=7]
[ext_resource path="res://assets/images/ui/book/Label Red Hover.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/font-data/font-style.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/images/ui/loot/title loot screen.png" type="Texture" id=10]
[ext_resource path="res://assets/fonts/font-data/font-read.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/images/ui/loot/loot_window2_scrolls.png" type="Texture" id=12]
[ext_resource path="res://assets/images/ui/loot/slot_reward.png" type="Texture" id=13]
[ext_resource path="res://assets/images/ui/book/Label Red.png" type="Texture" id=14]
[ext_resource path="res://game/recipe-book/TagButton.gd" type="Script" id=15]
[ext_resource path="res://assets/fonts/BagCounter.tres" type="DynamicFont" id=16]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 4
outline_color = Color( 0, 0, 0, 0.286275 )
use_mipmaps = true
use_filter = true
extra_spacing_bottom = 8
font_data = ExtResource( 9 )

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform float offset : hint_range(0, 36);

void vertex() {
	VERTEX = VERTEX + vec2(offset, 0);
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/offset = 0.0

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -152, 120 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "hide"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -152, 120 ), Vector2( -350, 120 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "show"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -350, 120 ), Vector2( -152, 120 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 768, 432 )

[sub_resource type="DynamicFont" id=6]
size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 11 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BG/MovingScreen:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1000 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BG:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "enter"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("BG/Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BG/MovingScreen:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1.23114 ),
"update": 0,
"values": [ Vector2( 0, 1000 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BG:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "disable_buttons"
}, {
"args": [  ],
"method": "enable_buttons"
} ]
}

[node name="Win" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.952941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="BG"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -345.0
margin_right = 345.0
margin_bottom = 173.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BG/Title"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "COLLECT_REWARDS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BookButton" type="TextureButton" parent="BG"]
material = SubResource( 8 )
margin_left = -152.0
margin_top = 120.0
margin_right = 193.0
margin_bottom = 218.0
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 8 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BG/BookButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.5
margin_top = 1.0
margin_right = 121.5
margin_bottom = 67.0
custom_fonts/font = ExtResource( 16 )
text = "RECIPES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="BG/BookButton"]
anims/RESET = SubResource( 9 )
anims/hide = SubResource( 10 )
anims/show = SubResource( 11 )

[node name="MovingScreen" type="Control" parent="BG"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1000.0
margin_right = 5760.0
margin_bottom = 4240.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipesContainer" type="Control" parent="BG/MovingScreen"]
margin_left = 1920.0
margin_right = 3840.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinRecipe1" parent="BG/MovingScreen/RecipesContainer" instance=ExtResource( 5 )]

[node name="WinRecipe2" parent="BG/MovingScreen/RecipesContainer" instance=ExtResource( 5 )]
margin_left = 640.0
margin_right = 1280.0

[node name="WinRecipe3" parent="BG/MovingScreen/RecipesContainer" instance=ExtResource( 5 )]
margin_left = 1280.0
margin_right = 1920.0

[node name="BackButton" type="Button" parent="BG/MovingScreen/RecipesContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -138.5
margin_top = -120.0
margin_right = 138.5
margin_bottom = -20.0
rect_min_size = Vector2( 0, 100 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LootBackground" type="TextureRect" parent="BG/MovingScreen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -3516.0
margin_top = -4138.0
margin_right = -2316.0
margin_bottom = -3258.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="BG/MovingScreen/LootBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -368.0
margin_top = -380.0
margin_right = 400.0
margin_bottom = 300.0
theme = ExtResource( 6 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RewardsContainer" type="VBoxContainer" parent="BG/MovingScreen/LootBackground/ScrollContainer"]
margin_right = 735.0
margin_bottom = 146.0
rect_min_size = Vector2( 735, 0 )
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PearlContainer" type="HBoxContainer" parent="BG/MovingScreen/LootBackground/ScrollContainer/RewardsContainer"]
visible = false
margin_right = 758.0
margin_bottom = 96.0
custom_constants/separation = 0

[node name="Frame" type="TextureRect" parent="BG/MovingScreen/LootBackground/ScrollContainer/RewardsContainer/PearlContainer"]
margin_right = 117.0
margin_bottom = 96.0
texture = ExtResource( 13 )
stretch_mode = 6

[node name="Pearl" type="TextureRect" parent="BG/MovingScreen/LootBackground/ScrollContainer/RewardsContainer/PearlContainer/Frame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -48.0
margin_right = 40.0
margin_bottom = 48.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="BG/MovingScreen/LootBackground/ScrollContainer/RewardsContainer/PearlContainer"]
margin_left = 117.0
margin_top = 8.0
margin_right = 247.0
margin_bottom = 88.0
rect_min_size = Vector2( 130, 80 )
custom_fonts/font = SubResource( 2 )
text = "x 1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="BG/MovingScreen/LootBackground/ScrollContainer/RewardsContainer/PearlContainer"]
margin_left = 247.0
margin_right = 758.0
margin_bottom = 96.0
rect_min_size = Vector2( 488, 0 )
theme = ExtResource( 1 )
text = "COLLECT_PEARLS"

[node name="LootList" type="VBoxContainer" parent="BG/MovingScreen/LootBackground/ScrollContainer/RewardsContainer"]
margin_right = 735.0

[node name="RecipesButton" type="Button" parent="BG/MovingScreen/LootBackground/ScrollContainer/RewardsContainer"]
margin_left = 101.0
margin_top = 50.0
margin_right = 633.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 96 )
size_flags_horizontal = 6
theme = ExtResource( 1 )
text = "GET_RECIPE_HINT"

[node name="Nothing" type="Label" parent="BG/MovingScreen/LootBackground/ScrollContainer/RewardsContainer"]
visible = false
margin_top = 196.0
margin_right = 735.0
margin_bottom = 396.0
rect_min_size = Vector2( 0, 200 )
text = "NOTHING_TO_COLLECT"
align = 1
valign = 1

[node name="ContinueButton" type="Button" parent="BG/MovingScreen/LootBackground"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -303.044
margin_top = -110.0
margin_right = 260.956
margin_bottom = 10.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 4
text = "CONTINUE_TO_MAP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeBook" parent="BG/MovingScreen" instance=ExtResource( 4 )]
margin_left = -1073.0
margin_top = -1538.0
margin_right = -1073.0
margin_bottom = -1538.0

[node name="Popup" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.952941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -216.0
margin_right = 384.0
margin_bottom = 216.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Popup/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
custom_constants/margin_top = 70
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/Panel/MarginContainer"]
margin_top = 70.0
margin_right = 1856.0
margin_bottom = 424.0

[node name="MarginContainer" type="MarginContainer" parent="Popup/Panel/MarginContainer/VBoxContainer"]
margin_right = 1856.0
margin_bottom = 250.0
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="Label" type="Label" parent="Popup/Panel/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 100.0
margin_right = 1756.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "REWARD_SKIP_CONFIRMATION_TEXT"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/Panel/MarginContainer/VBoxContainer"]
margin_top = 254.0
margin_right = 1856.0
margin_bottom = 354.0
size_flags_horizontal = 4

[node name="Back" type="Button" parent="Popup/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 879.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
text = "REWARD_SKIP_CONFIRMATION_BACK"

[node name="Continue" type="Button" parent="Popup/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 883.0
margin_right = 1856.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
text = "REWARD_SKIP_CONFIRMATION_CONTINUE"

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/enter = SubResource( 4 )

[connection signal="pressed" from="BG/BookButton" to="." method="_on_BookButton_pressed"]
[connection signal="chosen" from="BG/MovingScreen/RecipesContainer/WinRecipe1" to="." method="_on_WinRecipe_chosen"]
[connection signal="chosen" from="BG/MovingScreen/RecipesContainer/WinRecipe2" to="." method="_on_WinRecipe_chosen"]
[connection signal="chosen" from="BG/MovingScreen/RecipesContainer/WinRecipe3" to="." method="_on_WinRecipe_chosen"]
[connection signal="button_down" from="BG/MovingScreen/RecipesContainer/BackButton" to="." method="_on_Button_button_down"]
[connection signal="mouse_entered" from="BG/MovingScreen/RecipesContainer/BackButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="BG/MovingScreen/RecipesContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="button_down" from="BG/MovingScreen/LootBackground/ScrollContainer/RewardsContainer/PearlContainer/Button" to="." method="_on_Button_button_down"]
[connection signal="mouse_entered" from="BG/MovingScreen/LootBackground/ScrollContainer/RewardsContainer/PearlContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="BG/MovingScreen/LootBackground/ScrollContainer/RewardsContainer/PearlContainer/Button" to="." method="_on_pearl_collected"]
[connection signal="button_down" from="BG/MovingScreen/LootBackground/ScrollContainer/RewardsContainer/RecipesButton" to="." method="_on_Button_button_down"]
[connection signal="mouse_entered" from="BG/MovingScreen/LootBackground/ScrollContainer/RewardsContainer/RecipesButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="BG/MovingScreen/LootBackground/ScrollContainer/RewardsContainer/RecipesButton" to="." method="_on_RecipesButton_pressed"]
[connection signal="button_down" from="BG/MovingScreen/LootBackground/ContinueButton" to="." method="_on_Button_button_down"]
[connection signal="mouse_entered" from="BG/MovingScreen/LootBackground/ContinueButton" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="BG/MovingScreen/LootBackground/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="close" from="BG/MovingScreen/RecipeBook" to="." method="_on_RecipeBook_close"]
[connection signal="mouse_entered" from="Popup/Panel/MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Popup/Panel/MarginContainer/VBoxContainer/HBoxContainer/Back" to="." method="_on_Popup_Back_pressed"]
[connection signal="mouse_entered" from="Popup/Panel/MarginContainer/VBoxContainer/HBoxContainer/Continue" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Popup/Panel/MarginContainer/VBoxContainer/HBoxContainer/Continue" to="." method="_on_Popup_Continue_pressed"]
